tests/rosetta/out/Java/DNS-query.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// DNS-query.mochi
import java.util.*;

public class DNSQuery {
    public static void main(String[] args) {
        List<Object> res = net.LookupHost("www.kame.net");
        List<Object> addrs = res.get(0);
        List<Object> err = res.get(1);
        if (Objects.equals(err, nil)) {
            System.out.println(String.valueOf(addrs));
        }
        else {
            System.out.println(err);
        }
    }
}
